--- a/README
+++ b/README
@@ -1,33 +1,29 @@
 -- USERS --
-1. username: js, PIN: 1111
-
-const account1 = {
+1. 
+  username: js, 
   owner: 'Jonas Schmedtmann',
   movements: [200, 450, -400, 3000, -650, -130, 70, 1300],
   interestRate: 1.2, // %
-  pin: 1111,
-};
+  pin: 1111
 
-2. username: jd, PIN: 2222
-const account2 = {
+2. 
+  username: jd, 
   owner: 'Jessica Davis',
   movements: [5000, 3400, -150, -790, -3210, -1000, 8500, -30],
   interestRate: 1.5,
-  pin: 2222,
-};
+  pin: 2222
 
-3. username: stw, PIN: 3333
-const account3 = {
+
+3. 
+  username: stw,
   owner: 'Steven Thomas Williams',
   movements: [200, -200, 340, -300, -20, 50, 400, -460],
   interestRate: 0.7,
-  pin: 3333,
-};
+  pin: 3333
 
-4. username: ss, PIN: 4444
-const account4 = {
+4. 
+  username: ss,
   owner: 'Sarah Smith',
   movements: [430, 1000, 700, 50, 90],
   interestRate: 1,
-  pin: 4444,
-};
+  pin: 4444
